k8s-security.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: test
